# Mudra

./: .env.example  pyproject.toml
data/: comments_20260317_210816.txt  comments_20260317_221409.txt  comments_20260318_001046.txt  merged_comments.txt  sample.csv
data/day-1/: comments_20260317_210446.txt  comments_20260317_211221.txt  comments_20260317_213853.txt  comments_20260317_215011.txt  comments_20260317_215349.txt  comments_20260317_220038.txt  comments_20260317_220507.txt  comments_20260317_220920.txt  comments_20260317_231922.txt  comments_20260317_233552.txt  comments_20260317_234110.txt  comments_20260318_091011.txt  comments_20260318_092055.txt  comments_20260318_173538.txt
data/day-2/: comments_20260319_014544.txt  comments_20260319_014859.txt  comments_20260319_015142.txt  comments_20260319_015515.txt  comments_20260319_015915.txt  comments_20260319_080250.txt  comments_20260319_080829.txt  comments_20260319_081212.txt  comments_20260319_081727.txt  comments_20260319_081916.txt  comments_20260319_082035.txt  comments_20260319_082209.txt  comments_20260319_082354.txt  comments_20260319_082437.txt  comments_20260319_082551.txt  comments_20260319_082710.txt  comments_20260319_082804.txt  comments_20260319_082928.txt  comments_20260319_083434.txt  comments_20260319_083741.txt  comments_20260319_083816.txt  comments_20260319_083829.txt  comments_20260319_083856.txt  comments_20260319_083942.txt  comments_20260319_093312.txt  comments_20260319_093506.txt  comments_20260319_093656.txt  merged_comments.txt  (+12 more)
utils/: comment-crawler.py  merge-comments.py
